# pygameGUI

./: .gitignore  README.md  config.py  example.py  pygameGUI.py  pyproject.toml
example/: example.py  test.py
src/pygGUI/: __init__.py
src/pygameGUI/: __init__.py
