[project]
name = "pygGUI"
version = "0.0.1"
authors = [
  { name="Th3Catalyst"},
]
description = "A custom GUI library for pygame"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Th3Catalyst/pygameGUI"
Issues = "https://github.com/Th3Catalyst/pygameGUI/issues"